# pdf-multi-agent-analysis

./: .gitignore  README.md  convert-pdf-to-markdown.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: build-and-publish-site.yml  convert-rfp-pdf-to-markdown.yml  hybrid-multimodel-analysis.yml  local-multistage-refinement.yml
.tmp/run-audit/: knowledge-context.md  last-success-artifact.txt
assets/: mutual_nondisclosure_template.docx
docs/: about.md
docs/stylesheets/: extra.css
prompts/: analyst.md  claude-cleanup.md  extractor.md  reviewer.md  synthesizer.md
rfp-markdown/: 1 of 6_LinkedIn_NDA.md  1. LinkedIn_NDA.md  1. NDA LinkedIn 1 of 6.md  1. NDA.md  1.NDA.md  2. privacy-policy-template.md  3. employee-handbook-template.md  4. Copy of Zapier General One Pager.md  MUTUAL NON-DISCLOSURE AGREEMENT v10.md  MUTUAL NON-DISCLOSURE AGREEMENT v11.md  MUTUAL NON-DISCLOSURE AGREEMENT v12.md  MUTUAL NON-DISCLOSURE AGREEMENT v13.md  MUTUAL NON-DISCLOSURE AGREEMENT v4.md  MUTUAL NON-DISCLOSURE AGREEMENT v5.md  MUTUAL NON-DISCLOSURE AGREEMENT v6.md  MUTUAL NON-DISCLOSURE AGREEMENT v7.md  MUTUAL NON-DISCLOSURE AGREEMENT v9.md  MUTUAL NON-DISCLOSURE AGREEMENT.md  SS&C Services Agreement from 2024 v2.md  SS&C Services Agreement from 2024 v3.md  SS&C Services Agreement from 2024 v4.md  SS&C Services Agreement from 2024.md
scripts/: build_site_from_manifests.py
src/pdf_multi_agent_analysis/: __init__.py  agents.py  assets_context.py  (+5 more)
tests/: test_agents.py  test_assets_context.py  test_chunking.py  test_pipeline.py
(+63 files in other folders)
